--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,12 +10,31 @@
   --shadow-light-color: #fff;
   --main-bg-color: #ecf0f3;
 
-  --box-shadow: 1rem 1rem 1rem var(--shadow-dark-color),
-  -1rem -1rem 1rem var(--shadow-light-color);
+  --box-shadow: 0.5rem 0.5rem 0.5rem var(--shadow-dark-color),
+  -0.5rem -0.5rem 0.5rem transparent;
 
 
   --box-shadow-2: 0rem 0rem 0rem var(--shadow-dark-color),
   -.3rem -.3rem 1rem var(--shadow-dark-color)
+
+  /* --icons-color: #FFDF2B;
+  --icons-light-color: #ffdf2b57;
+  --icons-bg-color: #FFDF2B;
+  --shadow-dark-color: #555557;
+  --bg-shadow-dark-color: #555557;
+  --shadow-light-color: #232325;
+  --main-bg-color: #232325;
+  --overlay: #2323255e;
+
+  --box-shadow: 1px 1px 2px #FFDF2B,
+  -1px -1px 2px #FFDF2B;
+
+  --box-shadow-2:1px 1px 2px #FFDF2B,
+  -1px -1px 2px #FFDF2B;
+
+
+  --box-shadow-2: 0rem 0rem 0rem var(--shadow-dark-color),
+  -.3rem -.3rem 1rem var(--shadow-dark-color) */
 }
 
 
@@ -25,8 +44,8 @@ body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
-  /* background-color: var(--main-bg-color); */
-  /* color: var(--icons-color); */
+  background-color: var(--main-bg-color);
+  color: var(--icons-color);
 }
 
 a {
