--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -12,7 +12,7 @@
     margin: 0 auto;
     display: grid;
 
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 0.8fr 1.2fr;
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
@@ -41,6 +41,7 @@
 
   .logo_image {
     border-radius:100%;
+    /* border: 10px solid red!important; */
   }
 .navbar_container_left_box_input_box{
     width: 60%;
@@ -65,9 +66,9 @@
 }
 
 .navbar_container_right{
-
+    /* border:1px solid red; */
     display: grid;
-    grid-template-columns: 1fr 1fr .5fr 1fr .3fr;
+    grid-template-columns: 0.6fr 0.6fr .5fr 0.8fr 0.8fr;
     gap: 1rem;
     align-items: center;
     /* align-self: flex-end; */
@@ -124,8 +125,43 @@
 }
 
 .navbar_container_right_profile{
-    border-radius: 50%;
+    /* border-radius: 50%; */
 }
+
+.navbar_container_right_profile_connectBox {
+    color: var(--shadow-light-color);
+    background-color: #DFE7F5;
+    padding-right: 1rem;
+    width: 16.5rem;
+    height: 50px; 
+    /* border: 1px solid red; */
+    position: absolute;
+    /* top: -0.5rem; */
+    border-radius: 2rem;
+    display:flex;
+    justify-content: space-between
+}
+.navbar_container_right_profile_connectBox_address{
+    padding-top:1rem;
+
+    padding-left: 4.4rem;
+    color:  var(--icons-color);
+}
+
+.navbar_container_right_profile_connectBox_logo {
+    display:block!important;
+    position: absolute!important;
+    right:0 !important;
+    padding-right: 10px;
+}
+
+.navbar_container_right_profile_image{
+    /* border-radius: 2%; */
+    /* border: 1px solid red; */
+    position: absolute!important;
+    top:0!important;
+}
+
 
 .navbar_container_right_menuBtn{
     display: none;
