--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-:root{
+[data-theme='light']{
   --icons-color: #4c5773;
   --icons-light-color: #4c577341;
   --icons-bg-color: #e2e6e9;
@@ -17,7 +17,12 @@
   --box-shadow-2: 0rem 0rem 0rem var(--shadow-dark-color),
   -.3rem -.3rem 1rem var(--shadow-dark-color)
 
-  /* --icons-color: #FFDF2B;
+
+}
+
+
+[data-theme='dark'] {
+  --icons-color: #FFDF2B;
   --icons-light-color: #ffdf2b57;
   --icons-bg-color: #FFDF2B;
   --shadow-dark-color: #555557;
@@ -34,9 +39,8 @@
 
 
   --box-shadow-2: 0rem 0rem 0rem var(--shadow-dark-color),
-  -.3rem -.3rem 1rem var(--shadow-dark-color) */
+  -.3rem -.3rem 1rem var(--shadow-dark-color)
 }
-
 
 html,
 body {
