--- a/components/HeroSelection/HeroSection.module.css
+++ b/components/HeroSelection/HeroSection.module.css
@@ -24,7 +24,7 @@
 
 @media screen and (max-width: 35em) {
     .heroSection{
-        border: 1px solid black;
+        /* border: 1px solid black; */
         width: 90%;
     }
 }
@@ -33,7 +33,7 @@
 @media screen and (max-width: 55em) {
 
     .heroSection_box{
-        border: 1px solid red;
+        /* border: 1px solid red; */
         grid-template-columns: 1fr;
         gap: 4rem;
     }
