--- a/components/NavBar/SideBar/SideBar.module.css
+++ b/components/NavBar/SideBar/SideBar.module.css
@@ -1,5 +1,5 @@
 .sideBar_box{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding: 2rem;
     border-bottom: 1px solid var(--icons-color);
     background-color:  var(--main-bg-color);
